@@ -86,7 +86,7 @@ signals:
     void processing(bool isProcessing, bool visibleProgress = false);
     void databaseUpdated();
     void setStatusbarText(const QString &text = QString()); // text to statusbar
-    void setPermanentStatus(const QString &text = QString());
+    void numbersUpdated();
     void showMessage(const QString &text, const QString &title = "Info");
     void cancelProcess();
 };
