@@ -4,7 +4,8 @@ Veretino 0.3.4
     added a process abort prompt if a transition to other actions (or another DB) is requested,
     added icons to the Settings and Database Status window tabs, as well as to some other elements,
     the status bar text no longer disappears when the pointer moves to the menu,
-    it is now possible to hide any columns except the first one
+    it is now possible to hide any columns except the first one,
+    now the status bar displays the presence of a global filter if any
 
 Veretino 0.3.3
 * Settings and layout are now saved between sessions.
